--- a/src/main/resources/assets/cheesy/lang/en_us.json
+++ b/src/main/resources/assets/cheesy/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.cheese_tab": "Cheesy",
   "item.cheesy.cheese_gun": "Cheese Bazooka",
   "item.cheesy.cheese": "Cheese",
   "item.cheesy.cheese_nuke": "Nuclear Cheese"
